unpackaged/post/07_heda_object_tracking/objects/hed__Course_Offering__c.object
<CustomObject>
    <description>Joins Courses and Terms to contain information related to a single occurrence of a Course.</description>
	<label>Course Offering</label>
    <nameField>
        <label>Course Offering ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
	<fields>
        <fullName>hed__Term__c</fullName>
        <description>Lookup to the Term record that represents when this Course Offering takes place.</description>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>hed__End_Date__c</fullName>
        <description>The date of the last session for this Course Offering.</description>
        <inlineHelpText>The date of the last session for this Course Offering.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Faculty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the lead instructor for this Course Offering.</description>
        <inlineHelpText>Lookup to the lead instructor for this Course Offering.</inlineHelpText>
        <label>Primary Faculty</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Courses_Taught</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Start_Date__c</fullName>
        <description>The date of the first session for this Course Offering.</description>
        <inlineHelpText>The date of the first session for this Course Offering.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rio_ed__Fee_Label__c</fullName>
        <inlineHelpText>Used to identify which child fee of the parent fee defined in course should be used. This will replaced the default fee from course.</inlineHelpText>
        <label>Fee Label</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rio_ed__Fee_Label</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Will be automatically set based on Fee Label and Course &quot;use default fee&quot; settings</inlineHelpText>
        <label>Fee</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Only a Fee that has a Fee Unit of Course or Credit can be added to a Course record.</errorMessage>
            <filterItems>
                <field>rio_ed__Fee__c.rio_ed__Fee_Unit__c</field>
                <operation>equals</operation>
                <value>Course</value>
            </filterItems>
            <filterItems>
                <field>rio_ed__Fee__c.rio_ed__Fee_Unit__c</field>
                <operation>equals</operation>
                <value>Credit</value>
            </filterItems>
            <infoMessage>Please select a Fee for this Course.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rio_ed__Fee__c</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rio_ed__Release_Grades__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field's functionality has been replaced with the Grade Release Wizard.</description>
        <inlineHelpText>This field's functionality has been replaced with the Grade Release Wizard.</inlineHelpText>
        <label>(Obsolete) Release Grades</label>
        <type>Checkbox</type>
    </fields>
	
</CustomObject>